SIMLanguage/antlr-runtime/com/mmpnc/simlanguage/parse/SimLanguageGrammarParser.java
// $ANTLR 3.4 C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g 2014-12-02 18:56:10

  package com.mmpnc.simlanguage.parse;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class SimLanguageGrammarParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "COMMENTS", "DIV", "EQUALS", "EXPONENT", "IDENTS", "INTEGER", "MULTI_COMMENT", "NEGATION", "NOT", "NOTEQUALS", "OR", "SPECIALFUNCTION", "STARTS", "STRING", "SUBTRACT", "VARCONSTANT", "WS", "XPATHCONSTANT", "'!='", "'&&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "':'", "'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'And'", "'Attach'", "'ELSE'", "'END IF'", "'END LOOP'", "'Execute'", "'IF'", "'Is Equal To'", "'LOOP THROUGH'", "'NOT'", "'Negative'", "'Not Equal To'", "'Or'", "'RateTable'", "'StartsWith'", "'Subtract'", "'THEN'", "'Using'", "'mod'", "'{'", "'||'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int AND=4;
    public static final int COMMENTS=5;
    public static final int DIV=6;
    public static final int EQUALS=7;
    public static final int EXPONENT=8;
    public static final int IDENTS=9;
    public static final int INTEGER=10;
    public static final int MULTI_COMMENT=11;
    public static final int NEGATION=12;
    public static final int NOT=13;
    public static final int NOTEQUALS=14;
    public static final int OR=15;
    public static final int SPECIALFUNCTION=16;
    public static final int STARTS=17;
    public static final int STRING=18;
    public static final int SUBTRACT=19;
    public static final int VARCONSTANT=20;
    public static final int WS=21;
    public static final int XPATHCONSTANT=22;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public SimLanguageGrammarParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public SimLanguageGrammarParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return SimLanguageGrammarParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g"; }


    public static class block_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "block"
    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:40:1: block : statements EOF !;
    public final SimLanguageGrammarParser.block_return block() throws RecognitionException {
        SimLanguageGrammarParser.block_return retval = new SimLanguageGrammarParser.block_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token EOF2=null;
        SimLanguageGrammarParser.statements_return statements1 =null;


        CommonTree EOF2_tree=null;

        try {
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:40:7: ( statements EOF !)
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:41:5: statements EOF !
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_statements_in_block113);
            statements1=statements();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, statements1.getTree());

            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_block115); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "block"


    public static class statements_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "statements"
    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:43:1: statements : statement ( statement )* ;
    public final SimLanguageGrammarParser.statements_return statements() throws RecognitionException {
        SimLanguageGrammarParser.statements_return retval = new SimLanguageGrammarParser.statements_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        SimLanguageGrammarParser.statement_return statement3 =null;

        SimLanguageGrammarParser.statement_return statement4 =null;



        try {
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:43:12: ( statement ( statement )* )
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:44:9: statement ( statement )*
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_statement_in_statements132);
            statement3=statement();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, statement3.getTree());

            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:44:19: ( statement )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==IDENTS||LA1_0==VARCONSTANT||LA1_0==XPATHCONSTANT||LA1_0==40||(LA1_0 >= 44 && LA1_0 <= 45)||LA1_0==47) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:44:19: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_statements134);
            	    statement4=statement();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, statement4.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "statements"


    public static class statement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "statement"
    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:47:1: statement : ( assignment | ifStatement | loopStatement | function | executeProgram );
    public final SimLanguageGrammarParser.statement_return statement() throws RecognitionException {
        SimLanguageGrammarParser.statement_return retval = new SimLanguageGrammarParser.statement_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        SimLanguageGrammarParser.assignment_return assignment5 =null;

        SimLanguageGrammarParser.ifStatement_return ifStatement6 =null;

        SimLanguageGrammarParser.loopStatement_return loopStatement7 =null;

        SimLanguageGrammarParser.function_return function8 =null;

        SimLanguageGrammarParser.executeProgram_return executeProgram9 =null;



        try {
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:47:11: ( assignment | ifStatement | loopStatement | function | executeProgram )
            int alt2=5;
            switch ( input.LA(1) ) {
            case IDENTS:
                {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==25) ) {
                    alt2=4;
                }
                else if ( (LA2_1==35) ) {
                    alt2=1;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;

                }
                }
                break;
            case VARCONSTANT:
            case XPATHCONSTANT:
                {
                alt2=1;
                }
                break;
            case 45:
                {
                alt2=2;
                }
                break;
            case 47:
                {
                alt2=3;
                }
                break;
            case 40:
            case 44:
                {
                alt2=5;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:48:9: assignment
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_assignment_in_statement161);
                    assignment5=assignment();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, assignment5.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:48:22: ifStatement
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_ifStatement_in_statement165);
                    ifStatement6=ifStatement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, ifStatement6.getTree());

                    }
                    break;
                case 3 :
                    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:48:36: loopStatement
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_loopStatement_in_statement169);
                    loopStatement7=loopStatement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, loopStatement7.getTree());

                    }
                    break;
                case 4 :
                    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:48:52: function
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_function_in_statement173);
                    function8=function();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, function8.getTree());

                    }
                    break;
                case 5 :
                    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:48:63: executeProgram
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_executeProgram_in_statement177);
                    executeProgram9=executeProgram();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, executeProgram9.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "statement"


    public static class function_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "function"
    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:51:1: function : IDENTS ^ '(' ! ( ( 'Using' !)? ) ( arithmeticExp ( ',' arithmeticExp )* )? ')' !;
    public final SimLanguageGrammarParser.function_return function() throws RecognitionException {
        SimLanguageGrammarParser.function_return retval = new SimLanguageGrammarParser.function_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token IDENTS10=null;
        Token char_literal11=null;
        Token string_literal12=null;
        Token char_literal14=null;
        Token char_literal16=null;
        SimLanguageGrammarParser.arithmeticExp_return arithmeticExp13 =null;

        SimLanguageGrammarParser.arithmeticExp_return arithmeticExp15 =null;


        CommonTree IDENTS10_tree=null;
        CommonTree char_literal11_tree=null;
        CommonTree string_literal12_tree=null;
        CommonTree char_literal14_tree=null;
        CommonTree char_literal16_tree=null;

        try {
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:51:10: ( IDENTS ^ '(' ! ( ( 'Using' !)? ) ( arithmeticExp ( ',' arithmeticExp )* )? ')' !)
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:52:9: IDENTS ^ '(' ! ( ( 'Using' !)? ) ( arithmeticExp ( ',' arithmeticExp )* )? ')' !
            {
            root_0 = (CommonTree)adaptor.nil();


            IDENTS10=(Token)match(input,IDENTS,FOLLOW_IDENTS_in_function203); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            IDENTS10_tree = 
            (CommonTree)adaptor.create(IDENTS10)
            ;
            root_0 = (CommonTree)adaptor.becomeRoot(IDENTS10_tree, root_0);
            }

            char_literal11=(Token)match(input,25,FOLLOW_25_in_function206); if (state.failed) return retval;

            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:52:22: ( ( 'Using' !)? )
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:52:23: ( 'Using' !)?
            {
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:52:30: ( 'Using' !)?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==56) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:52:30: 'Using' !
                    {
                    string_literal12=(Token)match(input,56,FOLLOW_56_in_function210); if (state.failed) return retval;

                    }
                    break;

            }


            }


            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:52:34: ( arithmeticExp ( ',' arithmeticExp )* )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( ((LA5_0 >= IDENTS && LA5_0 <= INTEGER)||LA5_0==SPECIALFUNCTION||LA5_0==STRING||LA5_0==VARCONSTANT||LA5_0==XPATHCONSTANT||LA5_0==25||LA5_0==28||LA5_0==30||(LA5_0 >= 48 && LA5_0 <= 49)||LA5_0==52) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:52:35: arithmeticExp ( ',' arithmeticExp )*
                    {
                    pushFollow(FOLLOW_arithmeticExp_in_function216);
                    arithmeticExp13=arithmeticExp();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, arithmeticExp13.getTree());

                    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:52:49: ( ',' arithmeticExp )*
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( (LA4_0==29) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                    	case 1 :
                    	    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:52:50: ',' arithmeticExp
                    	    {
                    	    char_literal14=(Token)match(input,29,FOLLOW_29_in_function219); if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) {
                    	    char_literal14_tree = 
                    	    (CommonTree)adaptor.create(char_literal14)
                    	    ;
                    	    adaptor.addChild(root_0, char_literal14_tree);
                    	    }

                    	    pushFollow(FOLLOW_arithmeticExp_in_function221);
                    	    arithmeticExp15=arithmeticExp();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) adaptor.addChild(root_0, arithmeticExp15.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop4;
                        }
                    } while (true);


                    }
                    break;

            }


            char_literal16=(Token)match(input,26,FOLLOW_26_in_function227); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "function"


    public static class domainTable_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "domainTable"
    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:55:1: domainTable : IDENTS ^ '{' ! ( atom ( ',' atom )* )? '}' !;
    public final SimLanguageGrammarParser.domainTable_return domainTable() throws RecognitionException {
        SimLanguageGrammarParser.domainTable_return retval = new SimLanguageGrammarParser.domainTable_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token IDENTS17=null;
        Token char_literal18=null;
        Token char_literal20=null;
        Token char_literal22=null;
        SimLanguageGrammarParser.atom_return atom19 =null;

        SimLanguageGrammarParser.atom_return atom21 =null;


        CommonTree IDENTS17_tree=null;
        CommonTree char_literal18_tree=null;
        CommonTree char_literal20_tree=null;
        CommonTree char_literal22_tree=null;

        try {
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:55:13: ( IDENTS ^ '{' ! ( atom ( ',' atom )* )? '}' !)
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:56:9: IDENTS ^ '{' ! ( atom ( ',' atom )* )? '}' !
            {
            root_0 = (CommonTree)adaptor.nil();


            IDENTS17=(Token)match(input,IDENTS,FOLLOW_IDENTS_in_domainTable246); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            IDENTS17_tree = 
            (CommonTree)adaptor.create(IDENTS17)
            ;
            root_0 = (CommonTree)adaptor.becomeRoot(IDENTS17_tree, root_0);
            }

            char_literal18=(Token)match(input,58,FOLLOW_58_in_domainTable249); if (state.failed) return retval;

            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:56:22: ( atom ( ',' atom )* )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( ((LA7_0 >= IDENTS && LA7_0 <= INTEGER)||LA7_0==SPECIALFUNCTION||LA7_0==STRING||LA7_0==VARCONSTANT||LA7_0==XPATHCONSTANT||LA7_0==25||LA7_0==52) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:56:23: atom ( ',' atom )*
                    {
                    pushFollow(FOLLOW_atom_in_domainTable253);
                    atom19=atom();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, atom19.getTree());

                    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:56:28: ( ',' atom )*
                    loop6:
                    do {
                        int alt6=2;
                        int LA6_0 = input.LA(1);

                        if ( (LA6_0==29) ) {
                            alt6=1;
                        }


                        switch (alt6) {
                    	case 1 :
                    	    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:56:29: ',' atom
                    	    {
                    	    char_literal20=(Token)match(input,29,FOLLOW_29_in_domainTable256); if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) {
                    	    char_literal20_tree = 
                    	    (CommonTree)adaptor.create(char_literal20)
                    	    ;
                    	    adaptor.addChild(root_0, char_literal20_tree);
                    	    }

                    	    pushFollow(FOLLOW_atom_in_domainTable258);
                    	    atom21=atom();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) adaptor.addChild(root_0, atom21.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop6;
                        }
                    } while (true);


                    }
                    break;

            }


            char_literal22=(Token)match(input,60,FOLLOW_60_in_domainTable264); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "domainTable"


    public static class executeProgram_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "executeProgram"
    // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:58:1: executeProgram : programType ^ '(' ! ( IDENTS | xpath ) ')' !;
    public final SimLanguageGrammarParser.executeProgram_return executeProgram() throws RecognitionException {
        SimLanguageGrammarParser.executeProgram_return retval = new SimLanguageGrammarParser.executeProgram_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token char_literal24=null;
        Token IDENTS25=null;
        Token char_literal27=null;
        SimLanguageGrammarParser.programType_return programType23 =null;

        SimLanguageGrammarParser.xpath_return xpath26 =null;


        CommonTree char_literal24_tree=null;
        CommonTree IDENTS25_tree=null;
        CommonTree char_literal27_tree=null;

        try {
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:58:16: ( programType ^ '(' ! ( IDENTS | xpath ) ')' !)
            // C:\\Users\\shashikant460032\\Workspace\\eclipse\\SIMLanguage\\src\\main\\resources\\com\\mmpnc\\simlanguage\\grammar\\SimLanguageGrammar.g:59:9: programType ^ '(' ! ( IDENTS | xpath ) ')' !
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_programType_in_executeProgram281);
            programType23=programType();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) root_0 = (CommonTree)adaptor.becomeRoot(programType23.getTree(), root_0);

            char_literal24=(Token)match(input,25,FOLLOW_25_in_executeProgram284); if (state.failed) return retval;
